Added a comment macro for Lemmon

--- a/mics2015.tex
+++ b/mics2015.tex
@@ -68,6 +68,7 @@
 \newcommand{\pscomment}[1]{\textcolor{orange}{\comment{Paul: {#1}}}}
 \newcommand{\mmcomment}[1]{\textcolor{magenta}{\comment{Max: {#1}}}}
 \newcommand{\escomment}[1]{\textcolor{BlueViolet}{\comment{Emma: {#1}}}}
+\newcommand{\alcomment}[1]{\textcolor{red}{\comment{Lemmon: {#1}}}}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
