Added diagrams for error handling

--- a/mics2015.tex
+++ b/mics2015.tex
@@ -409,6 +409,23 @@ Ideally we would like our system to be IDE independent. But we need to be mindfu
 We would like to use an IDE that will be actively developed because that means there is less for us to maintain.
 
 \subsection{Implementing Error Handling}
+
+\begin{figure}[h]
+ \includegraphics[width=12cm]{CurrentErrorHandling.pdf}
+ \centering
+ \label{fig:CurrentError}
+\end{figure}
+
+Stuff about figure \ref{fig:CurrentError}.
+
+\begin{figure}[h]
+ \includegraphics[width=12cm]{OurErrorHandlingSystem.pdf}
+ \centering
+ \label{fig:OurSystem}
+\end{figure}
+
+Stuff about figure \ref{fig:OurSystem}.
+
 Outline for the Section:
 We attempted to use IDE specific plugins to handle error messages.
 
