Added explanation of the diagram. Some description and an outline of IDEs. Added a citation to .bib for lein.

--- a/mics2015.bib
+++ b/mics2015.bib
@@ -9,7 +9,7 @@
 
 
 
-@url{basic-clojure-info,
+@online{basic-clojure-info,
 	Author = {briantdawn},
 	Date-Added = {2015-03-11 20:18:54 +0000},
 	Date-Modified = {2015-03-11 20:20:13 +0000},
@@ -30,7 +30,7 @@
 	Url = {http://radar.oreilly.com/2012/05/clojure-repl.html},
 	Year = {2012}}
 
-@webpage{wikipedia-persistent,
+@online{wikipedia-persistent,
 	Author = {Wikipedia},
 	Date-Added = {2015-03-11 20:15:41 +0000},
 	Date-Modified = {2015-03-11 20:16:31 +0000},
@@ -39,7 +39,7 @@
 	Url = {http://en.wikipedia.org/wiki/Persistent_data_structure},
 	Year = {2015}}
 
-@webpage{clojure-datastructures,
+@online{clojure-datastructures,
 	Author = {Rich Hickey},
 	Date-Added = {2015-03-11 20:13:55 +0000},
 	Date-Modified = {2015-03-11 20:15:10 +0000},
@@ -48,7 +48,7 @@
 	Url = {http://clojure.org/data_structures},
 	Year = {2014}}
 
-@webpage{clojure-home,
+@online{clojure-home,
 	Author = {Rich Hickey},
 	Date-Added = {2015-03-11 20:09:08 +0000},
 	Date-Modified = {2015-03-11 20:16:38 +0000},
@@ -81,3 +81,12 @@
 	Howpublished = {\url{http://clojuredocs.org/clojure_core/clojure.core/pmap}},
 	Title = {ClojureDocs - pmap},
 	Year = {2010}}
+	
+@online{LeinGitHub,
+	Author = {Phil Hagelberg, Alex Osborne, Dan Larkin, and contributors},
+	Date-Added = {2005},
+	Date-modified{2015},
+	Lastchecked = {3/20/2015},
+	Title = {leiningen},
+	Url = {https://github.com/technomancy/leiningen},
+	Year = {2015}}
